--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -16,12 +16,17 @@
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name" >
+            
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        
+        <service android:name=".AccelerometerSensorService"></service>
+        <service android:name=".LightSensorService"></service>
+        
     </application>
 
 </manifest>
